[gd_scene load_steps=40 format=3 uid="uid://4vxo4kox7rxk"]

[ext_resource type="Script" path="res://node_2d.gd" id="1_qp0oj"]
[ext_resource type="Texture2D" uid="uid://c2frjrn4nyslq" path="res://img/$ limp.png" id="2_hwlpn"]
[ext_resource type="Texture2D" uid="uid://2jj3vaj52uts" path="res://img/Chests.png" id="3_0hu4c"]
[ext_resource type="Script" path="res://hitpoints.gd" id="3_h288m"]
[ext_resource type="Texture2D" uid="uid://bbw8flp06upqu" path="res://img/00.png" id="4_73l5x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ga800"]
atlas = ExtResource("3_0hu4c")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1c7i"]
atlas = ExtResource("3_0hu4c")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujuf4"]
atlas = ExtResource("3_0hu4c")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_py2a4"]
atlas = ExtResource("3_0hu4c")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3ddn"]
atlas = ExtResource("3_0hu4c")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bimq"]
atlas = ExtResource("3_0hu4c")
region = Rect2(0, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1no8"]
atlas = ExtResource("3_0hu4c")
region = Rect2(48, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5qc3"]
atlas = ExtResource("3_0hu4c")
region = Rect2(96, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbqff"]
atlas = ExtResource("3_0hu4c")
region = Rect2(144, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynqnv"]
atlas = ExtResource("3_0hu4c")
region = Rect2(192, 32, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wfwvo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ga800")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1c7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujuf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_py2a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3ddn")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bimq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1no8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5qc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbqff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynqnv")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_01eag"]
size = Vector2(51, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_5njdy"]
atlas = ExtResource("2_hwlpn")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxk8b"]
atlas = ExtResource("2_hwlpn")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qod5j"]
atlas = ExtResource("2_hwlpn")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jo21l"]
atlas = ExtResource("2_hwlpn")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_06tsj"]
atlas = ExtResource("2_hwlpn")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8esx"]
atlas = ExtResource("2_hwlpn")
region = Rect2(192, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfjkf"]
atlas = ExtResource("2_hwlpn")
region = Rect2(0, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3qqq"]
atlas = ExtResource("2_hwlpn")
region = Rect2(96, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2eyw"]
atlas = ExtResource("2_hwlpn")
region = Rect2(192, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwcbt"]
atlas = ExtResource("2_hwlpn")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ye2a"]
atlas = ExtResource("2_hwlpn")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuli8"]
atlas = ExtResource("2_hwlpn")
region = Rect2(96, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3r60"]
atlas = ExtResource("2_hwlpn")
region = Rect2(96, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwpav"]
atlas = ExtResource("2_hwlpn")
region = Rect2(0, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpxvr"]
atlas = ExtResource("2_hwlpn")
region = Rect2(96, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_n17ka"]
atlas = ExtResource("2_hwlpn")
region = Rect2(192, 288, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_0o533"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5njdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxk8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qod5j")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jo21l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06tsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8esx")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfjkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3qqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2eyw")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwcbt")
}],
"loop": true,
"name": &"stop_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ye2a")
}],
"loop": true,
"name": &"stop_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuli8")
}],
"loop": true,
"name": &"stop_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3r60")
}],
"loop": true,
"name": &"stop_top",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwpav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpxvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n17ka")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hiadx"]
size = Vector2(52, 83)

[sub_resource type="AtlasTexture" id="AtlasTexture_axfoi"]
atlas = ExtResource("4_73l5x")
region = Rect2(112, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gq7pl"]
atlas = ExtResource("4_73l5x")
region = Rect2(96, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cum4w"]
atlas = ExtResource("4_73l5x")
region = Rect2(80, 112, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qbhof"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_axfoi")
}],
"loop": true,
"name": &"full",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gq7pl")
}],
"loop": true,
"name": &"half",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cum4w")
}],
"loop": true,
"name": &"zero",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]

[node name="chest" type="Area2D" parent="."]
position = Vector2(523, 118)

[node name="chestAnimation" type="AnimatedSprite2D" parent="chest"]
texture_filter = 1
position = Vector2(14.6875, 10)
scale = Vector2(1.625, 1.625)
sprite_frames = SubResource("SpriteFrames_wfwvo")
animation = &"normal"

[node name="CollisionShape2D" type="CollisionShape2D" parent="chest"]
position = Vector2(2.5, 15)
shape = SubResource("RectangleShape2D_01eag")

[node name="player" type="Area2D" parent="."]
position = Vector2(556, 286)
script = ExtResource("1_qp0oj")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="player"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_0o533")
animation = &"stop_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2(0, 14.5)
shape = SubResource("RectangleShape2D_hiadx")

[node name="hitpoints" type="Area2D" parent="."]
position = Vector2(57, 23)
script = ExtResource("3_h288m")

[node name="hitpointAnimation" type="AnimatedSprite2D" parent="hitpoints"]
texture_filter = 1
position = Vector2(-37, 2)
scale = Vector2(2.75, 2.75)
sprite_frames = SubResource("SpriteFrames_qbhof")
animation = &"half"

[node name="hitpointAnimation2" type="AnimatedSprite2D" parent="hitpoints"]
texture_filter = 1
position = Vector2(7.62939e-06, 2)
scale = Vector2(2.75, 2.75)
sprite_frames = SubResource("SpriteFrames_qbhof")
animation = &"half"

[node name="hitpointAnimation3" type="AnimatedSprite2D" parent="hitpoints"]
texture_filter = 1
position = Vector2(36, 2)
scale = Vector2(2.75, 2.75)
sprite_frames = SubResource("SpriteFrames_qbhof")
animation = &"half"
